2004-11-26  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(symlinks)): Depend on config.status too.
	* configure.in (runtime/etc/mono/1.0/machine.config): Use custom
	command to create.
	(runtime/etc/mono/2.0/machine.config): Likewise.
	* Makefile.am (get-monolite-latest): Update to new style of
	handling the "basic" profile.

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (all-local): Make mcs/ tree writeable if
	necessary.
	(distdir): New.  Using 'cygnus' option disables the automake rule.

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (check-local): Use $(mkinstalldirs).

2004-11-24  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (AUTOMAKE_OPTIONS): Set to 'cygnus'. 
	Prevent a redundant 'make all' pass during 'make check'.
	(build_profiles): Rename from install_profiles.
	(check_profiles): New.
	(TEST_SUPPORT_FILES): Don't include 'gmcs' if we're not building
	the .NET2.0 profile.
	(all-local,check-local): Use them.
	(install,install-exec,install-data): Override automake rules to
	prevent a redundant 'make all' pass.
	
2004-11-23  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (bootstrap): echo -> @echo.

2004-11-23  Raja R Harinath  <rharinath@novell.com>

	Simplify 'make all' build.
	* configure.in (mono_build_root, mono_runtime, mono_cfg_dir):
	New AC_SUBSTed variables.
	(runtime/mono-wrapper): New generated file.
	(runtime/etc/mono/1.0/machine.config, runtime/etc/mono/2.0/machine.config):
	New symlinks.
	(AC_OUTPUT): Don't mention runtime/net_1_1 and runtime/net_2_0.
	* Makefile.am (SUBDIRS): Remove '.'.
	(tmpinst): Remove.
	(get-monolite-latest): Update.
	(populate-runtime-subdirs): Remove.
	(all-local, check-local): Move rules related to building in the mcs/ tree ...
	* runtime/Makefile.am: ... here.  Completely re-write file.
	(install-exec-local): Transfer ownership of installing .exes and
	.dlls to the Makefiles in the mcs/ tree.